[package]
name = "app"
version = "0.1.0"
authors = ["Keisuke Kan <9renpoto+g59@gmail.com>"]
edition = "2021"

[dependencies]
axum = "0.4.0"
futures = "0.3.18"
opensearch = { git = "https://github.com/opensearch-project/opensearch-rs" }
serde = "1.0.130"
serde_json = "1.0.72"
tower-service = "0.3.1"
tracing-subscriber = "0.3.3"
url = "2.2.2"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["run-cargo-clippy", "run-cargo-fmt"]
