[package]
name = "app"
version = "0.0.1"
authors = ["Keisuke Kan <9renpoto+g59@gmail.com>"]
edition = "2018"

[dependencies]
actix-rt = "2.8.0"
actix-web = "4.3.1"
opensearch = { git = "https://github.com/opensearch-project/opensearch-rs" }
serde = "1.0.172"
serde_json = "1.0.93"
url = "2.4.0"
futures = "0.3.28"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["precommit-hook"]
