[package]
name = "app"
version = "0.0.1"
authors = ["Keisuke Kan <9renpoto+g59@gmail.com>"]
edition = "2018"

[dependencies]
actix-rt = "2.9.0"
actix-web = "4.4.0"
opensearch = { git = "https://github.com/opensearch-project/opensearch-rs" }
serde = "1.0.190"
serde_json = "1.0.107"
url = "2.4.1"
futures = "0.3.29"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["precommit-hook"]
